# cycles-shader-editor-imgui

./: LICENSE  README.md  makefile
extra/: CMakeLists.txt  iwyu.imp  main.cpp
src/core/: lerp.h  rect.cpp  util_enum.h  vector.cpp  vector.h
src/editor/: enum.h  event.cpp  event.h  glfw_callbacks.h  main_window.cpp  main_window.h  modal_curve_editor.cpp  modal_curve_editor.h  modal_ramp_color_pick.cpp  node_geometry.cpp  platform.cpp  shader_editor.cpp  shader_editor.h  shared_state.h  subwindow_alert.cpp  subwindow_debug.cpp  subwindow_debug.h  subwindow_graph.cpp  subwindow_graph.h  subwindow_node_list.cpp  subwindow_param_editor.cpp  subwindow_param_editor.h  wrapper_glfw_func.cpp  wrapper_imgui_func.h
src/graph/: curves.cpp  curves.h  graph.cpp  graph.h  node.cpp  node.h  node_enums.cpp  node_enums.h  node_type.cpp  node_type.h  ramp.cpp  ramp.h  serialize.cpp  serialize.h  slot.cpp  slot.h
src/shader_core/: config.h  rect.h  stack_vector.h  vector.cpp  vector.h
src/shader_editor/: alt_slot_names.cpp  alt_slot_names.h  enum.h  event.cpp  event.h  glfw_callbacks.cpp  graph_display.h  main_window.cpp  main_window.h  modal_curve_editor.cpp  modal_curve_editor.h  modal_ramp_color_pick.h  node_geometry.cpp  node_geometry.h  platform.h  selection.cpp  selection.h  shader_editor.cpp  shader_editor.h  shader_editor_impl.cpp  shader_editor_impl.h  shared_state.cpp  shared_state.h  subwindow_alert.h  subwindow_debug.cpp  subwindow_graph.cpp  subwindow_graph.h  subwindow_node_list.cpp  subwindow_node_list.h  subwindow_param_editor.cpp  subwindow_param_editor.h  undo.cpp  (+5 more)
(+19 files in other folders)
